--- a/package.json
+++ b/package.json
@@ -18,8 +18,15 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@rxweb/reactive-form-validators": "^13.0.1",
+    "angular-slickgrid": "^7.4.1",
+    "file-saver": "^2.0.5",
     "fingerprintjs2": "^2.1.4",
+    "html-docx-js": "^0.3.1",
+    "jquery": "^3.7.1",
+    "jquery-ui-dist": "^1.13.2",
     "rxjs": "~7.8.0",
+    "slickgrid": "^5.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -27,8 +34,11 @@
     "@angular-devkit/build-angular": "^15.2.9",
     "@angular/cli": "~15.2.9",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/file-saver": "^2.0.7",
     "@types/fingerprintjs2": "^2.0.0",
+    "@types/html-docx-js": "^0.3.4",
     "@types/jasmine": "~4.3.0",
+    "@types/slickgrid": "^2.1.40",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
