--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@rxweb/reactive-form-validators": "^13.0.1",
     "angular-slickgrid": "^7.4.1",
     "file-saver": "^2.0.5",
