Registeration and login completed

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@rxweb/reactive-form-validators": "^13.0.1",
     "angular-slickgrid": "^7.4.1",
+    "crypto-js": "^4.2.0",
     "file-saver": "^2.0.5",
     "fingerprintjs2": "^2.1.4",
     "html-docx-js": "^0.3.1",
@@ -35,6 +36,7 @@
     "@angular-devkit/build-angular": "^15.2.9",
     "@angular/cli": "~15.2.9",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/file-saver": "^2.0.7",
     "@types/fingerprintjs2": "^2.0.0",
     "@types/html-docx-js": "^0.3.4",
