--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "file-saver": "^2.0.5",
     "fingerprintjs2": "^2.1.4",
     "html-docx-js": "^0.3.1",
+    "html2canvas": "^1.4.1",
     "jquery": "^3.7.1",
     "jquery-ui-dist": "^1.13.2",
+    "jspdf": "^2.5.1",
+    "pdfmake": "^0.2.9",
     "rxjs": "~7.8.0",
     "slickgrid": "^5.8.1",
     "tslib": "^2.3.0",
@@ -42,6 +45,7 @@
     "@types/fingerprintjs2": "^2.0.0",
     "@types/html-docx-js": "^0.3.4",
     "@types/jasmine": "~4.3.0",
+    "@types/pdfmake": "^0.2.9",
     "@types/slickgrid": "^2.1.40",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
